# hdfs-ceph-gateway

./: CMakeLists.txt
doc/: record-2025-12-04.md
proto/: CMakeLists.txt  gateway_internal.proto
src/: CMakeLists.txt  test_cephfs_main.cc
src/common/: logging.cc  logging.h  status.h  types.h
src/core/block/: block_manager.cc  block_manager.h
src/core/lease/: lease_manager.cc  lease_manager.h
src/core/namespace/: namespace_service.cc  namespace_service.h
src/fsal/cephfs/: cephfs_adapter.cc  cephfs_adapter.h
src/meta/: metadata_store.h  xattr_metadata_store.cc  xattr_metadata_store.h
src/protocol/datanode/: datanode_internal_service.h  datanode_rpc_connection.cc  datanode_rpc_connection.h  datanode_rpc_server.cc  datanode_rpc_server.h  datanode_server.cc  datanode_server.h  hdfs_datanode_service.h  hdfs_datanode_service_impl.cc  hdfs_datanode_service_impl.h
src/protocol/namenode/: hdfs_namenode_service.h  hdfs_namenode_service_impl.cc  hdfs_namenode_service_impl.h  hdfs_rpc_connection.cc  hdfs_rpc_connection.h  hdfs_rpc_server.cc  hdfs_rpc_server.h  namenode_rpc_connection.cc  namenode_rpc_connection.h  namenode_rpc_server.cc  namenode_rpc_server.h
src/rpc/internal/: internal_gateway_service.h  internal_gateway_service_dummy.h  internal_gateway_service_impl.cc  internal_gateway_service_impl.h  internal_rpc_client.cc  internal_rpc_client.h  internal_rpc_defs.h  internal_rpc_server.cc  internal_rpc_server.h
src/server/: gateway.cc  gateway.h  main.cc
src/tools/: gwctl.cc
